@@ -7,6 +7,7 @@ action_notify
 action_snmptrap
 action_snmpv1trap
 buildsearchdb
+bdbinfo
 cleanup
 clearcache
 collector
