@@ -28,6 +28,7 @@ pkgbin_SCRIPTS = \
 	action_printemail    	\
 	action_snmptrap      	\
 	action_snmpv1trap    	\
+	bdbinfo			\
 	buildsearchdb		\
 	cleanup   		\
 	clearcache   		\
@@ -57,6 +58,7 @@ EXTRA_DIST = \
 	action_printemail.in    \
 	action_snmptrap.in      \
 	action_snmpv1trap.in    \
+	bdbinfo.in		\
 	buildsearchdb.in	\
 	clearcache.in   	\
 	cleanup.in		\
@@ -97,6 +99,9 @@ action_snmpv1trap: action_snmpv1trap.in
 
 buildsearchdb: buildsearchdb.in
 	$(SUBST) buildsearchdb.in > buildsearchdb
+
+bdbinfo: bdbinfo.in
+	$(SUBST) bdbinfo.in > bdbinfo
 
 cleanup: cleanup.in
 	$(SUBST) cleanup.in > cleanup
